# ImageSearchEngine

./: .gitignore  README.md  pinecone_search.py  pyproject.toml  settings.toml
image_search_engine/src/: config.py
image_search_engine/src/data/: loader.py  processing.py
image_search_engine/src/model/: CLIP_model.py  clip.py  image_encoder.py  projection_head.py  text_encoder.py
image_search_engine/src/train/: train.py
src/: main.py  paths.py
src/client/: vector_db.py
src/data/: loader.py  processing.py
src/model/: clip.py
src/search/: clip_search.py  pinecone_search.py
src/train/: train.py
