[tool.poetry]
name = "image-search-engine"
version = "0.1.0"
description = ""
authors = ["Katarina <katarina.artukov@smartcat.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
